# data-transfer-template

./: README.md  autoclean  configure.ac
Documentation/: micro-install.txt
src/: Makefile.am  main.cpp
src/server/: server_config.cpp  server_config.h  server_db.cpp  server_db.h  server_db_gdm.cpp  server_db_gdm.h  server_db_mysql.cpp  server_db_mysql.h  server_db_pgsql.cpp  server_db_pgsql.h  server_db_sqllite.h  server_debug.cpp  server_debug.h  server_init.cpp  server_init.h  server_parse.cpp  server_parse.h  server_resp.cpp  server_resp.h  server_web.cpp  server_web.h  server_xml.cpp  server_xml.h
src/web/: helper.pl  web.py
